Running gunicorn with more workers.

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "heimmune"]
 	path = heimmune
 	url = https://github.com/edvardpedersen/heimmune
+[submodule "hover-serving"]
+	path = hover-serving
+	url = https://github.com/nsh23/hover-serving.git
