Reworking the web server

--- a/.gitmodules
+++ b/.gitmodules
@@ -2,5 +2,5 @@
 	path = heimmune
 	url = https://github.com/edvardpedersen/heimmune
 [submodule "hover-serving"]
-	path = hover-serving
+	path = hover_serving
 	url = https://github.com/nsh23/hover-serving.git
