--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "hover_serving"]
 	path = hover_serving
-	url = git@github.com:uit-hdl/hover_serving.git
+	url = https://github.com/uit-hdl/hover_serving.git
